<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_message">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mymessenger.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_person"
        android:name="com.example.mymessenger.ui.person.PersonFragment"
        android:label="@string/title_person"
        tools:layout="@layout/fragment_person" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.mymessenger.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.mymessenger.ui.mypage.MyPageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/navigation_recruit"
        android:name="com.example.mymessenger.ui.recruit.RecruitFragment"
        android:label="@string/title_recruit"
        tools:layout="@layout/fragment_recruit" />
</navigation>