<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_chat_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:id="@+id/item_chat_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/item_chat_photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/item_chat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_name"
                android:textColor="#000000"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/item_chat_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/chat_msg"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/item_chat_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_time"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>